InternexDev_Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>akritiv__Total_AR__c</fullName>
        <description>Total Account receivables. Sum of balance of all invoices under this account</description>
        <label>Total AR</label>
        <summarizedField>akritiv__Transaction__c.akritiv__Balance__c</summarizedField>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>akritiv__Total_Disputed__c</fullName>
        <description>Sum of all the disputes under this account.</description>
        <label>Total Disputed</label>
        <summarizedField>akritiv__Dispute__c.akritiv__Balance__c</summarizedField>
        <summaryForeignKey>akritiv__Dispute__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>akritiv__Total_Past_Due__c</fullName>
        <label>Total Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Total_Promised__c</fullName>
        <description>Total promised at account level with promise amount rollup</description>
        <label>Total Promised</label>
        <summarizedField>akritiv__Transaction__c.akritiv__Promised_Amount__c</summarizedField>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PAN_TAN__c</columns>
        <columns>NACIS_Code__c</columns>
        <columns>akritiv__Source__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>External_Id__c</columns>
        <columns>Portal_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CounterPartys</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(AccountNumber)&lt; 5</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account number minimum length should be 5 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_State_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(BillingState)),OR(LEN(BillingState)&gt;2 ,OR(LEN(SUBSTITUTE(BillingState,&apos;,&apos;,NULL)) != 2,IF(FIND(SUBSTITUTE(BillingState,&apos;,&apos;,NULL), &apos;AL,AK,AZ,AR,CA,CO,CT,DE,DC,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS,MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY&apos;) != 0,False,True))))</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>Please enter Valid state ISO codes of USA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Street_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( BillingStreet )&gt; 80</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Billing Street maximum length should be 80 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Duns_number_only_Alpha_Numeric</fullName>
        <active>true</active>
        <errorConditionFormula>And(not(ISBLANK(Duns_Number__c)),NOT( 
AND( 
LEN ( Duns_Number__c ) = 9, 
REGEX( Duns_Number__c , &quot;[a-zA-Z0-9]+&quot;) 
) 
))</errorConditionFormula>
        <errorDisplayField>Duns_Number__c</errorDisplayField>
        <errorMessage>Duns Number should be Alpha numeric and length should be 9 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pan_Tan_Only_Numeric</fullName>
        <active>true</active>
        <description>Not(And(REGEX(PAN_TAN__c, &quot;\\D*?(\\d\\D*?){9}&quot;),REGEX(PAN_TAN__c, &quot;[0-9]*$&quot;),Not(CONTAINS( PAN_TAN__c, &apos;000000000&apos;))))</description>
        <errorConditionFormula>And(Not( ISBLANK(PAN_TAN__c) ),Not(And(REGEX(PAN_TAN__c, &quot;\\D*?(\\d\\D*?){9}&quot;),REGEX(PAN_TAN__c, &quot;[0-9]*$&quot;),Not(CONTAINS( PAN_TAN__c, &apos;000000000&apos;)))))</errorConditionFormula>
        <errorDisplayField>PAN_TAN__c</errorDisplayField>
        <errorMessage>Tax Payer ID should be numeric and 9 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Validation_in_USA_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(BillingPostalCode)),OR(AND(Not(LEN(BillingPostalCode) = 5),Not(LEN(BillingPostalCode) = 10)),AND(LEN(BillingPostalCode) = 10,NOT(REGEX( BillingPostalCode , &quot;[0-9]{5}-[0-9]{4}&quot;))),AND(LEN(BillingPostalCode) = 5,NOT(REGEX( BillingPostalCode , &quot;[0-9]{5}&quot;)))))</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Please enter the Zip Code in the format &quot;99999-9999&quot; or &quot;99999&quot;</errorMessage>
    </validationRules>
</CustomObject>